test/positive/i147-ref-disambiguation.cfr
// http://gsd.uwaterloo.ca:8888/question/677/ref-should-only-be-needed-for-disambiguation

a -> integer ?
    b ?
        [ a = 4 ]