test/negative/i79_disallow-assignment-to-nonattributes-references.cfr
// http://gsd.uwaterloo.ca:8888/question/367/type-system-should-disallow-assignment-to-non

xor a
    b
    c

[ a = b ]